@@ -1,3 +1,10 @@
+2024-08-14  Collin Funk  <collin.funk1@gmail.com>  (tiny change)
+
+	Prefer #include <...> for system headers.
+	See <https://www.gnu.org/software/gnulib/manual/html_node/Style-of-_0023include-statements.html>.
+	* gnulib-local/lib/xmalloc.c: Include <error.h>.
+	* src/iconv.c: Likewise.
+
 2024-07-12  Bruno Haible  <bruno@clisp.org>
 
 	Switch to automake 1.17.
